--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,15 @@ body {
     max-width: 1600px; /* 1260px is the maximum width on my MacBook */
 }
 
+/* body */
+/* Tablets and smaller devices */
+@media (max-width: 768px) {
+    body {
+        padding: 1vh 5vw 0;
+        max-height: 100vh;
+    }
+}
+
 body a {
     color: #f4c542;
 }
@@ -28,6 +37,18 @@ header #hello-text h1 {
 
 header #hello-text #smallHey {
     font-size: 1.3rem;
+}
+
+/* hello text logo */
+/* Tablets and smaller devices */
+@media (max-width: 768px) {
+    header #hello-text h1 {
+        font-size: 1.9rem;
+    }
+    
+    header #hello-text #smallHey {
+        font-size: 1.1rem;
+    }
 }
 
 /* Navigation menu */
@@ -103,6 +124,21 @@ header #hello-text #smallHey {
     font-size: 3rem;
 }
 
+/* about me photo div */
+/* Tablets and smaller devices */
+@media (max-width: 768px) {
+    .defualt-page-format-banner{
+        margin-top: 2vh;
+        height: 65vh;
+    }
+    
+    .defualt-page-format-banner #content {
+        margin: 0;
+        font-size: 1.5rem;
+        margin: 0 20px;
+    }
+}
+
 /* main content */
 
 .defualt-page-format-main-content {
@@ -124,6 +160,17 @@ header #hello-text #smallHey {
 .defualt-page-format-main-content h4 {
     margin-top: 1.5rem;
     margin-bottom: 0.5rem;
+}
+
+/* main content */
+/* Tablets and smaller devices */
+@media (max-width: 768px) {
+    .defualt-page-format-main-content {
+        margin: 5vh auto 10vh;
+        padding: 0 20px;
+        font-family: sans-serif;
+        max-width: 900px;
+    }
 }
 
 /* Document embed view */
@@ -174,6 +221,10 @@ header #hello-text #smallHey {
   font-size: 1rem;
   box-sizing: border-box;
   font-family: 'Geological', sans-serif;
+}
+
+#form-contact-me #message {
+    height: 120px;
 }
 
 .g-recaptcha {
@@ -240,4 +291,23 @@ footer {
     color: #ffffff91;
     font-size: 0.8rem;
     font-weight: lighter;
+}
+
+/* footer nav menu for mobile */
+@media (max-width: 768px) {
+    footer #same-line-content {
+        display: block;
+        padding: 30px 0;
+    }
+
+    footer #same-line-content #navigation-menu ul {
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    footer #same-line-content #copyright {
+        margin: 30px 0;
+    }
 }
