--- a/css/home.css
+++ b/css/home.css
@@ -107,21 +107,21 @@ main-page {
     min-height: 90vh;
 }
 
-/* main-page page links */
+/* footer nav menu for mobile */
 @media (max-width: 768px) {
-    #main-page #same-line-content {
+    #same-line-content {
         display: block;
-        padding: 0;
+        padding: 0px 0;
     }
 
-    #main-pager #same-line-content #navigation-menu ul {
+    #same-line-content #navigation-menu ul {
         margin: 0;
         display: flex;
         flex-direction: column;
         gap: 15px;
     }
 
-    #main-page #same-line-content #copyright {
-        margin: 0;
+    #same-line-content #copyright {
+        margin: 30px 0;
     }
 }
