--- a/css/home.css
+++ b/css/home.css
@@ -122,6 +122,7 @@ main-page {
     }
 
     #same-line-content #copyright {
-        margin: 30px 0;
+        margin: 0;
+        padding: 40px 0;
     }
 }
