--- a/css/style.css
+++ b/css/style.css
@@ -286,6 +286,46 @@ header #hello-text #smallHey {
     margin-bottom: 0.5rem;
 }
 
+.multi-box-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: baseline;
+    column-gap: 20px;
+    row-gap: 20px;
+}
+
+.multi-box {
+    background-color: #001a2a;
+    padding: 0px 25px 20px;
+    border-radius: 15px;
+    width: 200px;
+    flex: 0 1 calc(33.333% - 20px); /* Adjust the percentage as needed */
+    box-sizing: border-box;
+}
+
+.multi-box h3 {
+    margin-top: 1.5rem;
+    margin-bottom: 0.5rem;
+    text-align: center;
+}
+
+/* .multi-box-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+    overflow: hidden;
+}
+
+.multi-box {
+    background-color: #001a2a;
+    padding: 0px 20px;
+    border-radius: 15px;
+    min-width: 200px;
+    flex: 1 1 calc(33.333% - 20px);
+    box-sizing: border-box;
+} */
+
 /* main content */
 /* Tablets and smaller devices */
 @media (max-width: 768px) {
