--- a/css/style.css
+++ b/css/style.css
@@ -315,25 +315,19 @@ header #hello-text #smallHey {
 @media (max-width: 768px) {
     .multi-box-container {
         display: block;
-        flex-wrap: wrap;
-        justify-content: baseline;
-        column-gap: 20px;
-        row-gap: 20px;
     }
     
     .multi-box {
-        background-color: #001a2a;
-        padding: 0px 25px 20px;
-        border-radius: 15px;
         width: 100%;
-        flex: 0 1 calc(100% - 20px); 
+        flex: none;
         box-sizing: border-box;
+        margin: 20px auto;
+        padding: 20px;
     }
     
     .multi-box h3 {
-        margin-top: 1.5rem;
-        margin-bottom: 0.5rem;
-        text-align: center;
+        margin: 10px 0 0;
+        text-align: left;
     }
 }
 
