Changed .jpg images to .webp image format for better web rendering speed, changed url for images, deleted redundent image files

--- a/css/home.css
+++ b/css/home.css
@@ -17,7 +17,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('../images/profile_long.jpg');
+    background-image: url('../images/profile_long.webp');
     background-size: cover;
     background-position: bottom;
     opacity: 0.90;
