--- a/css/style.css
+++ b/css/style.css
@@ -442,16 +442,16 @@ header #hello-text #smallHey {
 /* contact form */
 
 #form-contact-me {
-    background: rgba(255, 255, 255, 0.03);
+    background: #001e31;
     padding: 25px;
     border-radius: 20px;
     max-width: 600px;
     box-shadow: -1px 4px 10px rgba(0, 0, 0, 0.2), inset 0 0 8px rgba(0, 0, 0, 0.15);
     backdrop-filter: blur(10px);
-    border-top: 1.5px solid rgba(255, 255, 255, 0.11);
-    border-left: 0.9px solid rgba(255, 255, 255, 0.11);
-    border-right: 1.2px solid rgba(255, 255, 255, 0.11);
-    border-bottom: 0.8px solid rgba(255, 255, 255, 0.11);
+    border-top: 1.8px solid rgba(255, 255, 255, 0.11);
+    border-left: 1.2px solid rgba(255, 255, 255, 0.11);
+    border-right: 1.5px solid rgba(255, 255, 255, 0.11);
+    border-bottom: 1.1px solid rgba(255, 255, 255, 0.11);
     overflow: hidden;
     margin: 3rem auto;
     transition: transform 0.2s, box-shadow 0.2s, background 0.2s;
@@ -476,7 +476,7 @@ header #hello-text #smallHey {
 #form-contact-me:hover {
     transform: translateY(-0.5px);
     box-shadow: -1px 4px 10px rgba(0, 0, 0, 0.3), inset 0 0 8px rgba(0, 0, 0, 0.10);
-    background: rgba(255, 255, 255, 0.031);
+    background: #001e31;
 }
 
 #form-contact-me .field {
@@ -496,7 +496,7 @@ header #hello-text #smallHey {
 #form-contact-me input[type="tel"],
 #form-contact-me input[type="file"],
 #form-contact-me textarea {
-    background: rgba(0, 0, 0, 0.15);
+    background: rgba(0, 0, 0, 0.20);
     width: 100%;
     max-width: 100%;
     min-width: 100%;
@@ -551,7 +551,6 @@ header #hello-text #smallHey {
     background-image: linear-gradient(145deg, #d0ae49, #e6b730);
     color: #00111c;
     padding: 10px 20px;
-    border: none;
     border-radius: 10px;
     font-size: 1rem;
     font-weight: bold;
@@ -561,6 +560,16 @@ header #hello-text #smallHey {
     transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.2s ease;
     /* Base shadow to lift the button off the page */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    background: linear-gradient(
+        190deg,
+        #f4c542,
+        #f2b818
+    );
+    border-top: 1.9px solid rgba(255, 255, 255, 0.5);
+    border-left: 1.3px solid rgba(255, 255, 255, 0.2);
+    border-right: 1.6px solid rgba(255, 255, 255, 0.5);
+    border-bottom: 1.2px solid rgba(255, 255, 255, 0.2);
+    box-shadow: -1px 4px 10px rgba(0, 0, 0, 0.2), inset 0 0 8px rgba(0, 0, 0, 0.1);
 }
 
 /* Hover state: elevate the button and deepen the shadow */
