--- a/css/style.css
+++ b/css/style.css
@@ -592,6 +592,7 @@ footer {
     margin-left: -50vw;
     width: 100vw;
     background: #001a2a;
+    padding: 5px 0 25px;
 }
 
 .footer-content {
@@ -609,8 +610,8 @@ footer {
 
 /* copyright text */
 
-#same-line-content #copyright {
-    margin: 0;
+#copyright {
+    margin: 30px 0 0;
     color: #ffffff91;
     font-size: 0.8rem;
     font-weight: lighter;
