--- a/css/style.css
+++ b/css/style.css
@@ -611,7 +611,7 @@ footer {
 /* copyright text */
 
 #copyright {
-    margin: 30px 0 10px;
+    margin: 30px 0px 0px;
     color: #ffffff91;
     font-size: 0.8rem;
     font-weight: lighter;
