--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ header #hello-text #smallHey {
 /* article callout */
 .article-callout {
     padding: 10px 25px;
-    background-color: rgba(0, 36, 58, 0.709);
+    background-color: #00243ab5;
     border-left: 3px solid #f4c542;
     border-radius: 15px;
     max-width: 900px;
